--- a/src/pages/admin/studios/studios.css
+++ b/src/pages/admin/studios/studios.css
@@ -1,3 +1,17 @@
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #333333;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #eeeeee;
+  border-radius: 10px;
+}
+
 .wrapper {
   width: 100vw;
   height: 100vh;
@@ -350,7 +364,7 @@ td {
 .addNewStudioTitle {
   width: 70%;
   height: 10%;
-  border: 2px solid green;
+  /* border: 2px solid green; */
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -360,13 +374,13 @@ td {
 .addNewStudioPage {
   width: 70%;
   height: 95%;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   overflow-y: scroll;
 }
 .addNewStudioPage > div {
   width: 100%;
   height: 100%;
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   border-radius: 10px;
   background-color: white;
 }
@@ -377,7 +391,8 @@ td {
 .addNewStudioPage > div > div {
   width: 45%;
   height: 100%;
-  border: 2px solid pink;
+  /* border: 2px solid pink; */
+  padding-top: 2%;
   display: flex;
   gap: 2%;
   flex-direction: column;
@@ -390,15 +405,150 @@ td {
   flex-direction: column;
   gap: 10%;
 }
-.addNewStudioinputBox > input {
+.addNewStudioinputBox input,
+.addNewStudioinputBox select {
   border-radius: 10px;
-  height: 20%;
+
   width: 100%;
   outline: none;
   border: 2px solid #dddddd;
   padding-left: 5%;
+  color: black;
 }
 .addNewStudioinputBox > label {
+  font-size: 1vmax;
+  font-weight: 600;
+}
+.addNewStudioinputBox select {
+  padding: 1.8%;
+  margin-top: 0%;
+  height: 80%;
+}
+.amenitesCheckbox {
+  border: 2px solid #dddddd;
+  width: 100%;
+  height: 30%;
+  border-radius: 10px;
+  text-transform: capitalize;
+  display: flex;
+  flex-direction: column;
+  gap: 5%;
+  overflow-y: scroll;
+}
+.amenitesCheckbox > div {
+  /* border: 2px solid red; */
+  padding-left: 1%;
+  font-size: 1vmax;
+
+  /* align-items: center;
+  justify-content: center; */
+}
+.addNewStudioimgBox {
+  /* border: 2px solid red; */
+  width: 100%;
+  height: 30%;
+}
+.addNewStudioimgBox label {
+  font-size: 1vmax;
+  font-weight: 600;
+}
+.addNewStudioimgBox > div {
+  margin-top: 2%;
+  width: 100%;
+  border: 2px dashed black;
+  height: 85%;
+  border-radius: 10px;
+}
+.addNewStudioimgBox > div > label {
+  width: 100%;
+  height: 100%;
+  /* border: 2px solid green; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.addNewStudioimgBox > div > input {
+  display: none;
+}
+.addNewStudioimgBox > div > label span {
+  color: #ffc701;
+}
+.addNewStudioimgBox > div > label img {
+  width: 40px;
+  height: 30px;
+}
+.showlocationDiv {
+  width: 100%;
+  height: 15%;
+  border: 2px solid red;
+}
+.addNewStudioPage > div:nth-child(2) {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.addNewStudioPage > div:nth-child(2) > div {
+  width: 95%;
+  height: 90%;
+  /* border: 2px solid green; */
+}
+.addNewStudioinputBox2 {
+  width: 100%;
+  height: 20%;
+  /* border: 2px solid green; */
+  display: flex;
+  flex-direction: column;
+  gap: 10%;
+}
+.addNewStudioinputBox2 textarea {
+  border-radius: 10px;
+  height: 60%;
+  width: 100%;
+  outline: none;
+  border: 2px solid #dddddd;
+  padding-left: 1%;
+  color: black;
+  font-size: 0.8vmax;
+  font-weight: 600;
+  padding-top: 1%;
+}
+.addNewStudioinputBox2 > label {
+  font-size: 1vmax;
+  font-weight: 600;
+}
+.roomAndClassSection {
+  width: 100%;
+  height: 34%;
+  /* border: 2px solid red; */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.roomAndClassSection > div {
+  width: 48%;
+  /* border: 2px solid red; */
+  height: 100%;
+}
+.addNewStudioinputBox3 {
+  width: 100%;
+  height: 90%;
+  /* border: 2px solid green; */
+  display: flex;
+  flex-direction: column;
+  gap: 10%;
+}
+.addNewStudioinputBox3 input {
+  border-radius: 10px;
+
+  width: 100%;
+  outline: none;
+  border: 2px solid #dddddd;
+  padding-left: 5%;
+  color: black;
+}
+.addNewStudioinputBox3 > label {
   font-size: 1vmax;
   font-weight: 600;
 }
